# hpc_pytorch_loader

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_cluster.sh  setup_local.sh
datasets/hdf5/: hdf5_converter.py  hdf5_reader.py
datasets/memmap/: memmap_converter.py  memmap_reader.py
datasets/parquet_v1/: parquet_v1_converter.py  parquet_v1_reader.py
datasets/parquet_v2/: parquet_v2_converter.py  parquet_v2_reader.py
datasets/pyarrow_ipc/: pyarrow_ipc_converter.py  pyarrow_ipc_reader.py
datasets/tar/: tar_converter.py  tar_reader.py
examples/caltech256/: caltech256_conversion.py  caltech256_download.py  run_conversion.sh
examples/dense_labels/: pascal_conversion_test.py  pascal_reader_test.py  setup_jureca.sh
examples/dense_labels/dense_memmap/: dense_memmap_converter.py  dense_memmap_reader.py
examples/dense_labels/dense_pyarrow_ipc/: dense_pyarrow_ipc_converter.py  dense_pyarrow_ipc_reader.py
examples/imagenet1k/: imagenet1k_conversion.py  run_conversion.sh  run_train.sh  train_resnet18.py
hpc_pytorch_loader/datasets/hdf5/: hdf5_converter.py  hdf5_reader.py
hpc_pytorch_loader/datasets/memmap/: memmap_converter.py  memmap_reader.py
hpc_pytorch_loader/datasets/parquet_v1/: parquet_v1_converter.py  parquet_v1_reader.py
hpc_pytorch_loader/datasets/parquet_v2/: __init__.py  parquet_v2_converter.py  parquet_v2_reader.py
hpc_pytorch_loader/datasets/pyarrow_ipc/: pyarrow_ipc_converter.py  pyarrow_ipc_reader.py
hpc_pytorch_loader/utils/: converter_utils.py  reader_utils.py  utils.py
utils/: converter_utils.py  custom_sampler.py  utils.py
(+2 files in other folders)
